added better visualizations and functions file

--- a/rapport_R.ipynb
+++ b/rapport_R.ipynb
@@ -1114,6 +1114,7 @@
    "source": [
     "library(FactoMineR)\n",
     "\n",
+    "data_quant <- data_quant[, -c(2)]\n",
     "data.pca <- PCA(data_quant, scale.unit = T, graph = F, ncp = 6)"
    ]
   },
