--- a/rapport_R.ipynb
+++ b/rapport_R.ipynb
@@ -21,7 +21,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "library(vcd)\n",
+    "library(ggplot2)"
+   ]
   },
   {
    "cell_type": "markdown",
