tweaks and uploaded figures

--- a/rapport_Python.ipynb
+++ b/rapport_Python.ipynb
@@ -136,6 +136,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dans notre jeu de données, les variables qualitatives sont :\n",
+    "* `pop.class`,\n",
+    "* `key`,\n",
+    "* `mode`.\n",
+    "\n",
+    "Le reste des variables sont quantitatives."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -200,15 +212,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pop_class_count = data_qual[\"pop.class\"].value_counts().iloc[::-1]\n",
+    "pop_class_count = data_qual[\"pop.class\"].value_counts(normalize=True).iloc[::-1]\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
     "sns.barplot(x=pop_class_count.index, y=pop_class_count.values)\n",
     "#plt.title(\"Fréquence des classes de popularité\", fontsize=14)\n",
-    "plt.ylabel(\"Nombre d'occurences\", fontsize=13)\n",
+    "plt.ylabel(\"Pourcentage d'occurences\", fontsize=13)\n",
     "plt.xlabel(\"Classe\", fontsize=13)\n",
     "save_fig(\"pop_class_frequencies\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On voit qu'il y a une distribution uniforme des chansons par classe, sauf pour la classe `A`, qui comprend moins de 10% des chansons. Ceci risque de poser problème dans la suite en termes de prédiction."
    ]
   },
   {
@@ -268,6 +287,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les variances de la popularité dans chacune des valeurs de `key` est petite donc nous n'avons pas besoin de transformer ces données."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -278,8 +304,15 @@
     "#plt.title(\"Popularité selon la clé\", fontsize=14)\n",
     "plt.ylabel(\"Popularité\")\n",
     "plt.xlabel(\"Clé\")\n",
-    "#save_fig(\"popularity_by_key\")\n",
+    "save_fig(\"boxplot_of_popularity_by_key\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De la même façon, la distribution de la popularité reste plutôt uniforme par clé : les boîtes ont une taille similaire et la médiane est au même niveau."
    ]
   },
   {
@@ -295,15 +328,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mode_count = spotify_data[\"mode\"].value_counts()\n",
+    "mode_count = spotify_data[\"mode\"].value_counts(normalize=True)\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
     "sns.barplot(x=mode_count.index, y=mode_count.values)\n",
     "#plt.title(\"Fréquence des modes\", fontsize=14)\n",
-    "plt.ylabel(\"Nombre d'occurences\", fontsize=13)\n",
+    "plt.ylabel(\"Pourcentage d'occurences\", fontsize=13)\n",
     "plt.xlabel(\"Mode\", fontsize=13)\n",
     "save_fig(\"mode_frequencies\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La distribution selon `mode` est inégale : il y a 30% et 70% des chansons pour `mode` = 0 et `mode` = 1 respectivement."
    ]
   },
   {
@@ -322,6 +362,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Par contre, la popularité est similaire selon le mode."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -332,7 +379,7 @@
     "#plt.title(\"Popularité selon la clé\", fontsize=14)\n",
     "plt.ylabel(\"Popularité\")\n",
     "plt.xlabel(\"Clé\")\n",
-    "#save_fig(\"popularity_by_key\")\n",
+    "save_fig(\"boxplot_of_popularity_by_mode\")\n",
     "plt.show()"
    ]
   },
@@ -363,7 +410,7 @@
    "source": [
     "sns.boxplot(x='mode', y='popularity', hue='key', data=spotify_data)\n",
     "#plt.title(\"Popularité selon la clé et le mode\", fontsize=14)\n",
-    "#save_fig(\"popularity_by_key_and_mode\")\n",
+    "save_fig(\"boxplot_popularity_by_key_and_mode\")\n",
     "plt.show()"
    ]
   },
@@ -496,6 +543,7 @@
     "        a += 1\n",
     "\n",
     "    #fig.suptitle('Distribution des variables quantitatives', y=1.01, fontsize=20)\n",
+    "save_fig('hist_boxplot_of_data', tight_layout=False)\n",
     "plt.show()"
    ]
   },
@@ -526,7 +574,7 @@
     "                color='blue')\n",
     "#plt.title(\"Acousticité\")\n",
     "plt.ylabel('Popularité moyenne', fontsize=12)\n",
-    "plt.tight_layout()\n",
+    "save_fig('mean_popularity_by_acousticness')\n",
     "plt.show()"
    ]
   },
@@ -548,7 +596,7 @@
     "sns.scatterplot(x='danceability', y='popularity', data=ax_data, color='blue')\n",
     "#plt.title('Dançabilité')\n",
     "plt.ylabel('Popularité moyenne', fontsize=12)\n",
-    "plt.tight_layout()\n",
+    "save_fig('mean_popularity_by_danceability')\n",
     "plt.show()"
    ]
   },
@@ -608,6 +656,7 @@
     "#plt.title(f'Chansons courtes (<=8 min) : {short_songs.shape[0]} chansons')\n",
     "plt.xticks(range(0, 9, 1))\n",
     "plt.xlim(0, 9)\n",
+    "save_fig('hist_of_short_songs')\n",
     "plt.show()"
    ]
   },
@@ -619,6 +668,7 @@
    "source": [
     "sns.histplot(long_songs['duration'], kde=False, bins=60)\n",
     "#plt.title(f'Chansons longues (>8 min) : {long_songs.shape[0]} chansons')\n",
+    "save_fig('hist_of_long_songs')\n",
     "plt.show()"
    ]
   },
@@ -651,7 +701,7 @@
     "ax2.set_xlim(6, 50)\n",
     "ax2.set_title('Chansons longues')\n",
     "ax1.set_ylabel('Popularité moyenne', fontsize=12)\n",
-    "plt.tight_layout()\n",
+    "save_fig('popularity_by_long_short_songs')\n",
     "plt.show()"
    ]
   },
@@ -673,7 +723,7 @@
     "sns.scatterplot(x='energy', y='popularity', data=ax_data, color='blue')\n",
     "#plt.title('Énergie')\n",
     "plt.ylabel('Popularité moyenne', fontsize=12)\n",
-    "plt.tight_layout()\n",
+    "save_fig('mean_popularity_by_energy')\n",
     "plt.show()"
    ]
   },
@@ -699,14 +749,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spotify_data.loc[spotify_data['tempo'] == 0].shape"
+    "spotify_data.loc[spotify_data['instrumentalness'] == 0].shape"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On transformera la variable `instrumentalness` en trois sous-variables en raison de sa distribution inégale : il y a beaucoup de chansons ayant une valeur nulle d'instrumentalité, ce qui ne correspond pas vraiment avec la réalité."
+    "On transformera la variable `instrumentalness` en trois sous-variables en raison de sa distribution inégale : il y a beaucoup de chansons ($2806$) ayant une valeur nulle d'instrumentalité, ce qui ne correspond pas vraiment avec la réalité."
    ]
   },
   {
@@ -818,7 +868,7 @@
     "sns.scatterplot(x='liveness', y='popularity', data=ax_data, color='blue')\n",
     "#plt.title('liveness')\n",
     "plt.ylabel('Mean Popularity', fontsize=12)\n",
-    "plt.tight_layout()\n",
+    "save_fig('mean_popularity_by_liveness')\n",
     "plt.show()"
    ]
   },
@@ -843,6 +893,7 @@
     "ax2.set_xlim(0, 100)\n",
     "ax1.set_xlabel('')\n",
     "ax1.set_title('Haut : Toutes les données\\nBas : Popularité > 0', fontsize=12)\n",
+    "save_fig('hist_of_popularity')\n",
     "plt.show()"
    ]
   },
@@ -866,6 +917,7 @@
     "ax.set_xlabel('Année')\n",
     "ax.xaxis.set_tick_params(labelsize=10)\n",
     "ax.set_xticks(range(1920, 2021, 5))\n",
+    "save_fig('mean_popularity_by_year')\n",
     "plt.show()"
    ]
   },
@@ -882,7 +934,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.jointplot(x='tempo', y='popularity', data=spotify_data, height=10)\n",
+    "sns.jointplot(x='tempo', y='popularity', data=spotify_data, height=8)\n",
+    "save_fig('jointplot_of_tempo_popularity')\n",
     "plt.show()"
    ]
   },
@@ -945,7 +998,29 @@
     "                            color='r',\n",
     "                            linestyle='dashed',\n",
     "                            linewidth=3))\n",
+    "\n",
+    "save_fig('distribution_of_tempo')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On replace les valeurs où `tempo` = 0 par la médiane dans la colonne."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median = spotify_data.loc[spotify_data[\"tempo\"] > 0, \"tempo\"].median()\n",
+    "print(median)\n",
+    "\n",
+    "spotify_data.replace(to_replace={\"tempo\": 0}, value=median, inplace=True)\n",
+    "spotify_data[\"tempo\"].describe()"
    ]
   },
   {
@@ -962,7 +1037,7 @@
    "outputs": [],
    "source": [
     "sns.jointplot(x='year', y='popularity', data=spotify_data, height=10)\n",
-    "plt.suptitle(\"Joint plot de la popularité selon l'année de sortie\", y=1.02)\n",
+    "#plt.suptitle(\"Joint plot de la popularité selon l'année de sortie\", y=1.02)\n",
     "save_fig(\"jointplot_of_popularity_by_year\")\n",
     "plt.show()"
    ]
@@ -1080,6 +1155,8 @@
    "source": [
     "for i in ['key', 'mode']:\n",
     "    sns.pairplot(spotify_data, hue=i)\n",
+    "    t = 'pairplot_of_data_by_' + i\n",
+    "    save_fig(t)\n",
     "    plt.show()"
    ]
   },
@@ -1090,7 +1167,7 @@
    "outputs": [],
    "source": [
     "# sns.pairplot(spotify_data)\n",
-    "# #plt.suptitle(\"Pair plot des données\", fontsize=20, y=1.02)\n",
+    "# plt.suptitle(\"Pair plot des données\", fontsize=20, y=1.02)\n",
     "# save_fig(\"pairplot_of_dataset\")\n",
     "# plt.show()"
    ]
@@ -1114,8 +1191,8 @@
     "attributs = [\n",
     "    feature for feature in spotify_data.keys()\n",
     "    if feature not in data_qual.keys()\n",
+    "    and feature != 'popularity'\n",
     "]\n",
-    "attributs.remove('popularity')\n",
     "print(attributs)"
    ]
   },
@@ -1127,7 +1204,7 @@
    "source": [
     "X_new = spotify_data[attributs]\n",
     "X_scaled = scale(X_new)\n",
-    "pca = PCA()\n",
+    "pca = PCA(random_state=42)\n",
     "C = pca.fit_transform(X_scaled)"
    ]
   },
@@ -1284,6 +1361,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import OrdinalEncoder, LabelEncoder\n",
+    "\n",
     "spotify_pop_class = spotify_data[[\"pop.class\"]]\n",
     "spotify_key = spotify_data[[\"key\"]]"
    ]
@@ -1294,12 +1373,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import OrdinalEncoder, LabelEncoder\n",
+    "ordinal_encoder = OrdinalEncoder(dtype=np.int32)\n",
     "\n",
-    "ordinal_encoder = OrdinalEncoder()\n",
     "spotify_pop_class_encoded = ordinal_encoder.fit_transform(spotify_pop_class)\n",
     "spotify_pop_class_encoded = np.reshape(spotify_pop_class_encoded,\n",
-    "                                       spotify_data.shape[0]).astype(int)\n",
+    "                                       spotify_data.shape[0])\n",
     "print(spotify_pop_class_encoded[:10])"
    ]
   },
@@ -1310,6 +1388,7 @@
    "outputs": [],
    "source": [
     "label_encoder = LabelEncoder()\n",
+    "\n",
     "spotify_key_encoded = label_encoder.fit_transform(spotify_key.values.ravel())\n",
     "print(spotify_key_encoded[:10])"
    ]
@@ -1334,8 +1413,15 @@
     "    feature for feature in spotify_data.keys()\n",
     "    if feature not in ['popularity', 'pop.class']\n",
     "]\n",
-    "print(features)\n",
-    "\n",
+    "print(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X = spotify_data[features]\n",
     "y_class = spotify_data[[\"pop.class\"]]\n",
     "y_reg = spotify_data[[\"popularity\"]]\n",
@@ -1441,15 +1527,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classes = ['A', 'B', 'C', 'D']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "X_train, X_test, y_train_class, y_test_class = train_test_split(\n",
     "    X, y_class, test_size=0.25, random_state=42\n",
     ")"
@@ -1528,7 +1605,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cf_matrix(y_test_class, LM_Predict, classes, cmap='Blues', draw_mosaic=False)\n",
+    "plot_cf_matrix(y_test_class, LM_Predict, cmap='Blues', draw_mosaic=False)\n",
     "#plt.title(\"Confusion Matrix of LM\")\n",
     "save_fig(\"confusion_matrix_of_LM\")\n",
     "plt.show()"
@@ -1584,7 +1661,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cf_matrix(y_test_class, LOVR_Predict, classes, cmap='Blues', draw_mosaic=False)\n",
+    "plot_cf_matrix(y_test_class, LOVR_Predict, cmap='Blues', draw_mosaic=False)\n",
     "#plt.title(\"Confusion Matrix of LOVR\")\n",
     "save_fig(\"confusion_matrix_of_LOVR\")\n",
     "plt.show()"
@@ -1637,7 +1714,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cf_matrix(y_test_class, RFC_Predict, classes, cmap='Blues', draw_mosaic=False)\n",
+    "plot_cf_matrix(y_test_class, RFC_Predict, cmap='Blues', draw_mosaic=False)\n",
     "#plt.title(\"Confusion Matrix of RFC\")\n",
     "save_fig(\"confusion_matrix_of_RFC\")\n",
     "plt.show()"
@@ -1717,7 +1794,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cf_matrix(y_test_class, DT_Predict, classes, cmap='Blues', draw_mosaic=False)\n",
+    "plot_cf_matrix(y_test_class, DT_Predict, cmap='Blues', draw_mosaic=False)\n",
     "#plt.title(\"Confusion Matrix of Decision Trees\")\n",
     "save_fig(\"confusion_matrix_of_DT\")\n",
     "plt.show()"
@@ -1768,7 +1845,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cf_matrix(y_test_class, LSVC_Prediction, classes, cmap='Blues', draw_mosaic=False)\n",
+    "plot_cf_matrix(y_test_class, LSVC_Prediction, cmap='Blues', draw_mosaic=False)\n",
     "#plt.title(\"Confusion Matrix of LSVC OVR\")\n",
     "save_fig(\"confusion_matrix_of_LSVC_OVR\")\n",
     "plt.show()"
@@ -1809,7 +1886,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cf_matrix(y_test_class, LSVC_Prediction, classes, cmap='Blues', draw_mosaic=False)\n",
+    "plot_cf_matrix(y_test_class, LSVC_Prediction, cmap='Blues', draw_mosaic=False)\n",
     "#plt.title(\"Confusion Matrix of LSVC C-S\")\n",
     "save_fig(\"confusion_matrix_of_LSVC_CS\")\n",
     "plt.show()"
@@ -1873,7 +1950,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cf_matrix(y_test_class, SVC_Predict, classes, cmap='Blues', draw_mosaic=False)\n",
+    "plot_cf_matrix(y_test_class, SVC_Predict, cmap='Blues', draw_mosaic=False)\n",
     "#plt.title(\"Confusion Matrix of LOVR\")\n",
     "save_fig(\"confusion_matrix_of_SVC\")\n",
     "plt.show()"
@@ -1968,7 +2045,7 @@
    "source": [
     "NN_Predict = np.argmax(model.predict(X_test_scaled), axis=-1)\n",
     "\n",
-    "plot_cf_matrix(y_test_class, NN_Predict, classes, cmap='Blues', draw_mosaic=False)\n",
+    "plot_cf_matrix(y_test_class, NN_Predict, cmap='Blues', draw_mosaic=False)\n",
     "#plt.title(\"Confusion Matrix of NN\")\n",
     "save_fig(\"confusion_matrix_of_NN\")\n",
     "plt.show()"
