--- a/rapport_Python.ipynb
+++ b/rapport_Python.ipynb
@@ -108,6 +108,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "On n'a pas de valeurs manquantes donc on n'a pas besoin de les remplacer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Les variables explicatives sont :\n",
     "* `valence` : la positivité de la chanson, vaut 1 si la chanson est très joyeuse, 0 sinon ;\n",
     "* `year` : année de sortie ;\n",
@@ -1153,11 +1160,11 @@
    },
    "outputs": [],
    "source": [
-    "for i in ['key', 'mode']:\n",
-    "    sns.pairplot(spotify_data, hue=i)\n",
-    "    t = 'pairplot_of_data_by_' + i\n",
-    "    save_fig(t)\n",
-    "    plt.show()"
+    "# for i in ['key', 'mode']:\n",
+    "#     sns.pairplot(spotify_data, hue=i)\n",
+    "#     t = 'pairplot_of_data_by_' + i\n",
+    "#     save_fig(t)\n",
+    "#     plt.show()"
    ]
   },
   {
@@ -1472,6 +1479,7 @@
    "outputs": [],
    "source": [
     "def get_NN_model(n_inputs, n_outputs, problem=None):\n",
+    "    '''Fonction pour créer un réseau de neuronnes'''\n",
     "    model = keras.models.Sequential()\n",
     "    \n",
     "    model.add(keras.layers.Dense(100,\n",
@@ -1545,6 +1553,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_accuracy_score = []\n",
+    "model_AUC = []"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1596,6 +1614,8 @@
    "source": [
     "LM_Predict = LM.predict(X_test_scaled)\n",
     "LM_Accuracy = accuracy_score(y_test_class, LM_Predict)\n",
+    "model_accuracy_score.append(LM_Accuracy)\n",
+    "\n",
     "print(\"Précision :\" + str(LM_Accuracy))"
    ]
   },
@@ -1609,6 +1629,15 @@
     "#plt.title(\"Confusion Matrix of LM\")\n",
     "save_fig(\"confusion_matrix_of_LM\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(classification_report(y_test_class, LM_Predict))"
    ]
   },
   {
@@ -1652,6 +1681,8 @@
    "source": [
     "LOVR_Predict = LOVR.predict(X_test_scaled)\n",
     "LOVR_Accuracy = accuracy_score(y_test_class, LOVR_Predict)\n",
+    "model_accuracy_score.append(LOVR_Accuracy)\n",
+    "\n",
     "print(\"Précision :\" + str(LOVR_Accuracy))"
    ]
   },
@@ -1668,6 +1699,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(classification_report(y_test_class, LOVR_Predict))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1677,7 +1717,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#param=[{\"n_estimators\":np.arange(100,500,100),\"max_features\":list(range(2,10,1))}]\n",
@@ -1705,6 +1747,8 @@
    "source": [
     "RFC_Predict = RFC_Model.predict(X_test)\n",
     "RFC_Accuracy = accuracy_score(y_test_class, RFC_Predict)\n",
+    "model_accuracy_score.append(RFC_Accuracy)\n",
+    "\n",
     "print(\"Précision : \" + str(RFC_Accuracy))"
    ]
   },
@@ -1753,7 +1797,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "param = [{\n",
@@ -1785,6 +1831,8 @@
    "source": [
     "DT_Predict = DT_Model.predict(X_test)\n",
     "DT_Accuracy = accuracy_score(y_test_class, DT_Predict)\n",
+    "model_accuracy_score.append(DT_Accuracy)\n",
+    "\n",
     "print(\"Précision : \" + str(DT_Accuracy))"
    ]
   },
@@ -1815,6 +1863,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(classification_report(y_test_class, DT_Predict))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1834,9 +1891,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LSVC_Model = LinearSVC(multi_class='ovr', max_iter=4000, random_state=42)\n",
-    "LSVC_Model.fit(X_train_scaled, y_train_class)\n",
-    "LSVC_Prediction = LSVC_Model.predict(X_test_scaled)"
+    "LSVC_Model = LinearSVC(multi_class='ovr', max_iter=5000, random_state=100)\n",
+    "LSVC_Model.fit(X_train_scaled, y_train_class)"
    ]
   },
   {
@@ -1845,7 +1901,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cf_matrix(y_test_class, LSVC_Prediction, cmap='Blues', draw_mosaic=False)\n",
+    "LSVC_Predict = LSVC_Model.predict(X_test_scaled)\n",
+    "LSVC_Accuracy = accuracy_score(y_test_class, LSVC_Predict)\n",
+    "model_accuracy_score.append(LSVC_Accuracy)\n",
+    "\n",
+    "print(\"Précision : \" + str(LSVC_Accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cf_matrix(y_test_class, LSVC_Predict, cmap='Blues', draw_mosaic=False)\n",
     "#plt.title(\"Confusion Matrix of LSVC OVR\")\n",
     "save_fig(\"confusion_matrix_of_LSVC_OVR\")\n",
     "plt.show()"
@@ -1857,7 +1926,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(classification_report(y_test_class, LSVC_Prediction))"
+    "print(classification_report(y_test_class, LSVC_Predict))"
    ]
   },
   {
@@ -1873,11 +1942,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LSVC_Model = LinearSVC(multi_class='crammer_singer',\n",
-    "                       max_iter=4000,\n",
+    "LSVC_CS_Model = LinearSVC(multi_class='crammer_singer',\n",
+    "                       max_iter=5000,\n",
     "                       random_state=42)\n",
-    "LSVC_Model.fit(X_train_scaled, y_train_class)\n",
-    "LSVC_Prediction = LSVC_Model.predict(X_test_scaled)"
+    "LSVC_CS_Model.fit(X_train_scaled, y_train_class)"
    ]
   },
   {
@@ -1886,7 +1954,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cf_matrix(y_test_class, LSVC_Prediction, cmap='Blues', draw_mosaic=False)\n",
+    "LSVC_CS_Predict = LSVC_CS_Model.predict(X_test_scaled)\n",
+    "LSVC_CS_Accuracy = accuracy_score(y_test_class, LSVC_CS_Predict)\n",
+    "model_accuracy_score.append(LSVC_CS_Accuracy)\n",
+    "\n",
+    "print(\"Précision : \" + str(LSVC_CS_Accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cf_matrix(y_test_class, LSVC_CS_Predict, cmap='Blues', draw_mosaic=False)\n",
     "#plt.title(\"Confusion Matrix of LSVC C-S\")\n",
     "save_fig(\"confusion_matrix_of_LSVC_CS\")\n",
     "plt.show()"
@@ -1898,7 +1979,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(classification_report(y_test_class, LSVC_Prediction, zero_division=0))"
+    "print(classification_report(y_test_class, LSVC_Predict, zero_division=0))"
    ]
   },
   {
@@ -1911,7 +1992,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "param = [{\n",
@@ -1941,6 +2024,8 @@
    "source": [
     "SVC_Predict = SVC_Model.predict(X_test_scaled)\n",
     "SVC_Accuracy = accuracy_score(y_test_class, SVC_Predict)\n",
+    "model_accuracy_score.append(SVC_Accuracy)\n",
+    "\n",
     "print(\"Précision :\" + str(SVC_Accuracy))"
    ]
   },
@@ -2044,7 +2129,18 @@
    "outputs": [],
    "source": [
     "NN_Predict = np.argmax(model.predict(X_test_scaled), axis=-1)\n",
+    "NN_Accuracy = accuracy_score(y_test_class, NN_Predict)\n",
+    "model_accuracy_score.append(NN_Accuracy)\n",
     "\n",
+    "print(\"Précision :\" + str(NN_Accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot_cf_matrix(y_test_class, NN_Predict, cmap='Blues', draw_mosaic=False)\n",
     "#plt.title(\"Confusion Matrix of NN\")\n",
     "save_fig(\"confusion_matrix_of_NN\")\n",
@@ -2058,6 +2154,33 @@
    "outputs": [],
    "source": [
     "print(classification_report(y_test_class, NN_Predict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(model_accuracy_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_performance_accuracy = pd.DataFrame({\n",
+    "    'Model': [\n",
+    "        'Logistic Regression', 'LOVR', 'Random Forest Classifier',\n",
+    "        'Decision Tree Classifier', 'Linear SVC', 'LSVC_CS Classifier',\n",
+    "        'SVC', 'Neural Network Classifier',\n",
+    "    ],\n",
+    "    'Accuracy': model_accuracy_score\n",
+    "})\n",
+    "\n",
+    "model_performance_accuracy"
    ]
   },
   {
@@ -2107,6 +2230,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse_scores = []\n",
+    "r2_scores = []\n",
+    "evs_scores = []"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2121,8 +2255,26 @@
    "source": [
     "LR_Model = LinearRegression()\n",
     "LR_Model.fit(X_train, y_train_reg)\n",
-    "LR_Predict = LR_Model.predict(X_test)\n",
-    "\n",
+    "LR_Predict = LR_Model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse_scores.append(mean_squared_error(y_test_reg, LR_Predict))\n",
+    "r2_scores.append(r2_score(y_test_reg, LR_Predict))\n",
+    "evs_scores.append(explained_variance_score(y_test_reg, LR_Predict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot_results(reg_metrics, y_test_reg, y_test_class, LR_Predict)\n",
     "#plt.title(\"Results of Linear Regression Predictions\")\n",
     "save_fig(\"results_of_LR_predictions\")\n",
@@ -2144,8 +2296,26 @@
    "source": [
     "RF_Model = RandomForestRegressor()\n",
     "RF_Model.fit(X_train, y_train_reg)\n",
-    "RF_Predict = RF_Model.predict(X_test)\n",
-    "\n",
+    "RF_Predict = RF_Model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse_scores.append(mean_squared_error(y_test_reg, RF_Predict))\n",
+    "r2_scores.append(r2_score(y_test_reg, RF_Predict))\n",
+    "evs_scores.append(explained_variance_score(y_test_reg, RF_Predict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot_results(reg_metrics, y_test_reg, y_test_class, RF_Predict)\n",
     "#plt.title(\"Results of Random Forest Predictions\")\n",
     "save_fig(\"results_of_RF_predictions\")\n",
@@ -2176,6 +2346,17 @@
     "# paramètre optimal\n",
     "print(\"Meilleur score = %f, Meilleur paramètre = %s\" %\n",
     "      (1. - RF_Optim.best_score_, RF_Optim.best_params_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse_scores.append(mean_squared_error(y_test_reg, RF_Predict_Optim))\n",
+    "r2_scores.append(r2_score(y_test_reg, RF_Predict_Optim))\n",
+    "evs_scores.append(explained_variance_score(y_test_reg, RF_Predict_Optim))"
    ]
   },
   {
@@ -2219,8 +2400,26 @@
    "source": [
     "DT_Model = DecisionTreeRegressor()\n",
     "DT_Model.fit(X_train, y_train_reg)\n",
-    "DT_Predict = DT_Model.predict(X_test)\n",
-    "\n",
+    "DT_Predict = DT_Model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse_scores.append(mean_squared_error(y_test_reg, DT_Predict))\n",
+    "r2_scores.append(r2_score(y_test_reg, DT_Predict))\n",
+    "evs_scores.append(explained_variance_score(y_test_reg, DT_Predict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot_results(reg_metrics, y_test_reg, y_test_class, DT_Predict)\n",
     "#plt.title(\"Results of Decision Tree Predictions\")\n",
     "save_fig(\"results_of_DT_predictions\")\n",
@@ -2251,6 +2450,17 @@
     "# paramètres optimaux\n",
     "print(\"Meilleur score = %f, Meilleur paramètre = %s\" %\n",
     "      (1. - DT_Optim.best_score_, DT_Optim.best_params_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse_scores.append(mean_squared_error(y_test_reg, DT_Predict_Optim))\n",
+    "r2_scores.append(r2_score(y_test_reg, DT_Predict_Optim))\n",
+    "evs_scores.append(explained_variance_score(y_test_reg, DT_Predict_Optim))"
    ]
   },
   {
@@ -2294,8 +2504,26 @@
    "source": [
     "LSVR_Model = LinearSVR()\n",
     "LSVR_Model.fit(X_train_scaled, y_train_reg)\n",
-    "LSVR_Predict = LSVR_Model.predict(X_test_scaled)\n",
-    "\n",
+    "LSVR_Predict = LSVR_Model.predict(X_test_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse_scores.append(mean_squared_error(y_test_reg, LSVR_Predict))\n",
+    "r2_scores.append(r2_score(y_test_reg, LSVR_Predict))\n",
+    "evs_scores.append(explained_variance_score(y_test_reg, LSVR_Predict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot_results(reg_metrics, y_test_reg, y_test_class, LSVR_Predict)\n",
     "#plt.title(\"Results of Linear SVR Predictions\")\n",
     "save_fig(\"results_of_LSVR_predictions\")\n",
@@ -2325,6 +2553,17 @@
     "# paramètre optimal\n",
     "print(\"Meilleur score = %f, Meilleur paramètre = %s\" %\n",
     "      (1. - LSVR_Optim.best_score_, LSVR_Optim.best_params_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse_scores.append(mean_squared_error(y_test_reg, LSVR_Predict_Optim))\n",
+    "r2_scores.append(r2_score(y_test_reg, LSVR_Predict))\n",
+    "evs_scores.append(explained_variance_score(y_test_reg, LSVR_Predict_Optim))"
    ]
   },
   {
@@ -2368,8 +2607,26 @@
    "source": [
     "SVR_Model = SVR()\n",
     "SVR_Model.fit(X_train_scaled, y_train_reg)\n",
-    "SVR_Predict = SVR_Model.predict(X_test_scaled)\n",
-    "\n",
+    "SVR_Predict = SVR_Model.predict(X_test_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse_scores.append(mean_squared_error(y_test_reg, SVR_Predict))\n",
+    "r2_scores.append(r2_score(y_test_reg, SVR_Predict))\n",
+    "evs_scores.append(explained_variance_score(y_test_reg, SVR_Predict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot_results(reg_metrics, y_test_reg, y_test_class, SVR_Predict)\n",
     "#plt.title(\"Results of SVR Predictions\")\n",
     "save_fig(\"results_of_SVR_predictions\")\n",
@@ -2399,6 +2656,17 @@
     "# paramètre optimal\n",
     "print(\"Meilleur score = %f, Meilleur paramètre = %s\" %\n",
     "      (1. - SVR_Optim.best_score_, SVR_Optim.best_params_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse_scores.append(mean_squared_error(y_test_reg, SVR_Predict_Optim))\n",
+    "r2_scores.append(r2_score(y_test_reg, SVR_Predict_Optim))\n",
+    "evs_scores.append(explained_variance_score(y_test_reg, SVR_Predict_Optim))"
    ]
   },
   {
@@ -2450,7 +2718,8 @@
    "outputs": [],
    "source": [
     "history = model.fit(X_train_scaled, y_train_reg, epochs=200, batch_size=30,\n",
-    "                    validation_data=(X_test_scaled, y_test_reg), verbose=0)"
+    "                    validation_data=(X_test_scaled, y_test_reg), verbose=0)\n",
+    "NN_Predict = model.predict(X_test_scaled)"
    ]
   },
   {
@@ -2472,12 +2741,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NN_Predict = model.predict(X_test_scaled)\n",
-    "\n",
+    "mse_scores.append(mean_squared_error(y_test_reg, NN_Predict))\n",
+    "r2_scores.append(r2_score(y_test_reg, NN_Predict))\n",
+    "evs_scores.append(explained_variance_score(y_test_reg, NN_Predict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot_results(reg_metrics, y_test_reg, y_test_class, NN_Predict)\n",
     "#plt.title(\"Results of NN Predictions\")\n",
     "save_fig(\"results_of_NN_predictions\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regression_scores = pd.DataFrame({\n",
+    "    'Model': [\n",
+    "        'Linear Regression', 'Random Forest', 'Random Forest Optim',\n",
+    "        'Decision Trees', 'Decision Trees Optim', 'Linear SVR', 'Linear SVR Optim',\n",
+    "        'SVR', 'SVR Optim', 'Neural Network'\n",
+    "    ],\n",
+    "    'Mean Squared Error': mse_scores,\n",
+    "    'R2 Scores': r2_scores,\n",
+    "    'Explained Variance Score': evs_scores\n",
+    "})\n",
+    "\n",
+    "regression_scores"
    ]
   },
   {
