finished transcription of first sections

--- a/rapport_Python.ipynb
+++ b/rapport_Python.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Projet de Machine Learning\n",
     "\n",
-    "Notebook Python avec les codes utilisés pour le rapport final.<br>\n",
+    "Notebook <b>Python</b> avec les codes utilisés pour le rapport final.<br>\n",
     "Auteurs : Juan AYALA, Jeong Hwan KO, Alice LALOUE, Aldo MELLADO AGUILAR.<br>\n",
     "4A MA - Groupes A et B<br>\n",
     "2020 - 2021"
@@ -164,16 +164,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_qual = spotify_data[[\"pop.class\", \"mode\", \"key\"]]\n",
-    "data_qual.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "print(\"Valeurs de 'pop.class' :\", sorted(set(data_qual[\"pop.class\"].values)), \"\\n\")\n",
     "print(\"Valeurs de 'key':\", sorted(set(data_qual[\"key\"].values)), \"\\n\")\n",
     "print(\"Valeurs de 'mode' :\", set(data_qual[\"mode\"].values))"
@@ -220,12 +210,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_qual = spotify_data[[\"pop.class\", \"mode\", \"key\"]]\n",
+    "data_qual.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Classe de popularité</b>\n",
+    "<b>Classe de popularité</b> (variable à prédire)\n",
     "\n",
-    "Cette variable a été créée en amont de l'obtention des données. C'est notre variable à prédire en classification."
+    "Cette variable a été créée en amont de l'obtention des données."
    ]
   },
   {
@@ -451,8 +451,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_quant = spotify_data[spotify_data.columns.difference(\n",
-    "    ['key', 'mode', 'pop.class'], sort=False)]\n",
+    "data_quant = spotify_data[spotify_data.columns.difference(['key', 'mode', 'pop.class'],\n",
+    "                                                          sort=False)]\n",
     "data_quant.keys()"
    ]
   },
@@ -589,8 +589,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax_data = spotify_data.groupby(\n",
-    "    'acousticness')['popularity'].mean().to_frame().reset_index()\n",
+    "ax_data = spotify_data.groupby('acousticness')['popularity'].\n",
+    "    mean().to_frame().reset_index()\n",
     "sns.scatterplot(x=ax_data['acousticness'],\n",
     "                y=ax_data['popularity'],\n",
     "                color='blue')\n",
@@ -613,8 +613,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax_data = spotify_data.groupby(\n",
-    "    'danceability')['popularity'].mean().to_frame().reset_index()\n",
+    "ax_data = spotify_data.groupby('danceability')['popularity'].\n",
+    "    mean().to_frame().reset_index()\n",
     "sns.scatterplot(x='danceability', y='popularity', data=ax_data, color='blue')\n",
     "#plt.title('Dançabilité')\n",
     "plt.ylabel('Popularité moyenne', fontsize=12)\n",
@@ -702,8 +702,8 @@
    "source": [
     "fig, (ax1, ax2) = plt.subplots(1, 2, sharey=True)\n",
     "\n",
-    "ax1_data = short_songs.groupby(\n",
-    "    'duration')['popularity'].mean().to_frame().reset_index()\n",
+    "ax1_data = short_songs.groupby('duration')['popularity'].\n",
+    "    mean().to_frame().reset_index()\n",
     "ax1 = sns.scatterplot(x='duration', y='popularity',\n",
     "                      data=ax1_data, color='blue', ax=ax1)\n",
     "ax1.set_xticks(range(0, 9, 1))\n",
@@ -711,8 +711,8 @@
     "ax1.set_ylabel('Popularité moyenne', fontsize=13)\n",
     "# ax1.set_title('Chansons courtes')\n",
     "\n",
-    "ax2_data = long_songs.groupby(\n",
-    "    'duration')['popularity'].mean().to_frame().reset_index()\n",
+    "ax2_data = long_songs.groupby('duration')['popularity'].\n",
+    "    mean().to_frame().reset_index()\n",
     "ax2 = sns.scatterplot(x=ax2_data['duration'],\n",
     "                      y=ax2_data['popularity'],\n",
     "                      color='green', ax=ax2)\n",
@@ -737,8 +737,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax_data = spotify_data.groupby(\n",
-    "    'energy')['popularity'].mean().to_frame().reset_index()\n",
+    "ax_data = spotify_data.groupby('energy')['popularity'].\n",
+    "    mean().to_frame().reset_index()\n",
     "sns.scatterplot(x='energy', y='popularity', data=ax_data, color='blue')\n",
     "#plt.title('Énergie')\n",
     "plt.ylabel('Popularité moyenne', fontsize=12)\n",
@@ -882,11 +882,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax_data = spotify_data.groupby(\n",
-    "    'liveness')['popularity'].mean().to_frame().reset_index()\n",
+    "ax_data = spotify_data.groupby('liveness')['popularity'].\n",
+    "    mean().to_frame().reset_index()\n",
     "sns.scatterplot(x='liveness', y='popularity', data=ax_data, color='blue')\n",
     "#plt.title('liveness')\n",
-    "plt.ylabel('Mean Popularity', fontsize=12)\n",
+    "plt.ylabel('Popularité moyenne', fontsize=12)\n",
     "save_fig('mean_popularity_by_liveness')\n",
     "plt.show()"
    ]
@@ -1065,7 +1065,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On normalise la variable`danceability` vu sa ressemblance à une loi gaussienne :"
+    "<b>Prétraitement de variables :</b>\n",
+    "\n",
+    "On normalise la variable `danceability` vu sa ressemblance à une loi gaussienne :"
    ]
   },
   {
@@ -1075,12 +1077,19 @@
    "outputs": [],
    "source": [
     "spotify_data[\"dance_norm\"] = (spotify_data[\"danceability\"] - spotify_data[\"danceability\"].mean())\\\n",
-    "/ spotify_data[\"danceability\"].std()\n",
+    "    / spotify_data[\"danceability\"].std()\n",
     "\n",
     "sns.histplot(spotify_data[\"dance_norm\"], bins=50, kde=True)\n",
     "#plt.title(\"Variable 'danceability' normalisée\")\n",
     "save_fig(\"scaled_danceability\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Puis on la supprime :"
    ]
   },
   {
@@ -1117,11 +1126,11 @@
    },
    "outputs": [],
    "source": [
-    "for i in ['key', 'mode']:\n",
-    "    sns.pairplot(spotify_data, hue=i)\n",
-    "    t = 'pairplot_of_data_by_' + i\n",
-    "    save_fig(t)\n",
-    "    plt.show()"
+    "# for i in ['key', 'mode']:\n",
+    "#     sns.pairplot(spotify_data, hue=i)\n",
+    "#     t = 'pairplot_of_data_by_' + i\n",
+    "#     save_fig(t)\n",
+    "#     plt.show()"
    ]
   },
   {
@@ -1334,8 +1343,10 @@
     "        label = label_mode[i + 1]\n",
     "        color = cmaps(i)\n",
     "        ax.scatter(x=xs, y=ys, color=color, alpha=.5, s=1, label=label)\n",
-    "        ax.set_xlabel(\"PC %d: %.2f%%\" % (nbc, pca.explained_variance_ratio_[nbc - 1] * 100), fontsize=10)\n",
-    "        ax.set_ylabel(\"PC %d: %.2f%%\" % (nbc2, pca.explained_variance_ratio_[nbc2 - 1] * 100), fontsize=10)"
+    "        ax.set_xlabel(\"PC %d: %.2f%%\" %\n",
+    "                      (nbc, pca.explained_variance_ratio_[nbc - 1] * 100), fontsize=10)\n",
+    "        ax.set_ylabel(\"PC %d: %.2f%%\" %\n",
+    "                      (nbc2, pca.explained_variance_ratio_[nbc2 - 1] * 100), fontsize=10)"
    ]
   },
   {
@@ -1345,7 +1356,8 @@
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(12, 8))\n",
-    "for nbc, nbc2, count in [(1, 2, 1), (1, 3, 2), (1, 4, 3), (2, 3, 5), (2, 4, 6), (3, 4, 9)]:\n",
+    "for nbc, nbc2, count in [(1, 2, 1), (1, 3, 2), (1, 4, 3),\n",
+    "                         (2, 3, 5), (2, 4, 6), (3, 4, 9)]:\n",
     "    ax = fig.add_subplot(3, 3, count)\n",
     "    plot_pca(spotify_pca, fig, ax, nbc, nbc2, pca)\n",
     "    plt.subplots_adjust(wspace=0.3, hspace=0.3)\n",
@@ -1353,6 +1365,51 @@
     "plt.legend(loc='best', bbox_to_anchor=(1.8, 2), markerscale=8, fontsize='large')\n",
     "#plt.suptitle('Principal Components from 1 to 4', fontsize=14)\n",
     "save_fig('scatter_of_1_4_pc', tight_layout=False)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_corr_circle_bis(data, pca, comp1, comp2, fig, ax):\n",
+    "    '''Plots correlation circle from results of PCA'''\n",
+    "    coord1 = pca.components_[comp1 - 1] * np.sqrt(pca.explained_variance_[comp1 - 1])\n",
+    "    coord2 = pca.components_[comp2 - 1] * np.sqrt(pca.explained_variance_[comp2 - 1])\n",
+    "\n",
+    "    cmap = sns.color_palette(\"flare\", as_cmap=True)\n",
+    "    for i, j, nom in zip(coord1, coord2, data.columns):\n",
+    "        plt.text(i, j, nom, rotation=45)\n",
+    "        rainbowarrow(ax, (0, 0), (i, j), cmap=cmap, lw=2)\n",
+    "    plt.axis((-1.2, 1.2, -1.2, 1.2))\n",
+    "\n",
+    "    # cercle\n",
+    "    c = plt.Circle((0, 0), radius=1, color='gray', fill=False)\n",
+    "    ax.add_patch(c)\n",
+    "    \n",
+    "    xlab = 'Dim ' + str(comp1) + ': ' + str(pca.explained_variance_ratio_[comp1 - 1] * 100)[:4] + '%'\n",
+    "    ylab = 'Dim ' + str(comp2) + ': ' + str(pca.explained_variance_ratio_[comp2 - 1] * 100)[:4] + '%'\n",
+    "    ax.set_xlabel(xlab, fontsize=12)\n",
+    "    ax.set_ylabel(ylab, fontsize=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(16, 16))\n",
+    "for nbc, nbc2, count in [(1, 2, 1), (1, 3, 2), (1, 4, 3), (2, 3, 5), (2, 4, 6), (3, 4, 9)]:\n",
+    "    ax = fig.add_subplot(3, 3, count)\n",
+    "    plot_corr_circle_bis(X_new, pca, nbc, nbc2, fig, ax)\n",
+    "    plt.subplots_adjust(wspace=0.3, hspace=0.4)\n",
+    "\n",
+    "#plt.legend(loc='best', bbox_to_anchor=(1.8, 2), markerscale=8, fontsize='large')\n",
+    "#plt.suptitle('Principal Components from 1 to 4', fontsize=14)\n",
+    "#save_fig('scatter_of_1_4_corr_circle', tight_layout=False)\n",
     "plt.show()"
    ]
   },
