Added thresholding to regression

--- a/rapport_Python.ipynb
+++ b/rapport_Python.ipynb
@@ -2231,6 +2231,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_rtc_LR = reg_to_class(LR_Predict)\n",
+    "LR_Accuracy = accuracy_score(y_test_class, y_rtc_LR)\n",
+    "print(\"Précision :\" + str(LR_Accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cf_matrix(y_test_class, y_rtc_LR, cmap='Blues', draw_mosaic=False)\n",
+    "#plt.title(\"Confusion Matrix of LR\")\n",
+    "save_fig(\"confusion_matrix_of_LR\")\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2276,6 +2299,29 @@
     "plot_results(reg_metrics, y_test_reg, y_test_class, LassoR_Predict, model_accuracy_score)\n",
     "#plt.title(\"Results of Lasso Predictions\")\n",
     "save_fig(\"results_of_Lasso_predictions\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_rtc_LassoR = reg_to_class(LassoR_Predict)\n",
+    "LassoR_Accuracy = accuracy_score(y_test_class, y_rtc_LassoR)\n",
+    "print(\"Précision :\" + str(LassoR_Accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cf_matrix(y_test_class, y_rtc_LassoR, cmap='Blues', draw_mosaic=False)\n",
+    "#plt.title(\"Confusion Matrix of LassoR\")\n",
+    "save_fig(\"confusion_matrix_of_LassoR\")\n",
     "plt.show()"
    ]
   },
@@ -2329,6 +2375,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_rtc_RidgeR = reg_to_class(RidgeR_Predict)\n",
+    "RidgeR_Accuracy = accuracy_score(y_test_class, y_rtc_RidgeR)\n",
+    "print(\"Précision :\" + str(RidgeR_Accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cf_matrix(y_test_class, y_rtc_RidgeR, cmap='Blues', draw_mosaic=False)\n",
+    "#plt.title(\"Confusion Matrix of RidgeR\")\n",
+    "save_fig(\"confusion_matrix_of_RidgeR\")\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2374,6 +2443,29 @@
     "plot_results(reg_metrics, y_test_reg, y_test_class, ENet_Predict, model_accuracy_score)\n",
     "#plt.title(\"Results of Elastic Net Predictions\")\n",
     "save_fig(\"results_of_EN_predictions\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_rtc_ENet = reg_to_class(ENet_Predict)\n",
+    "ENet_Accuracy = accuracy_score(y_test_class, y_rtc_ENet)\n",
+    "print(\"Précision :\" + str(ENet_Accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cf_matrix(y_test_class, y_rtc_ENet, cmap='Blues', draw_mosaic=False)\n",
+    "#plt.title(\"Confusion Matrix of ENetR\")\n",
+    "save_fig(\"confusion_matrix_of_ENetR\")\n",
     "plt.show()"
    ]
   },
@@ -2449,6 +2541,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_rtc_RF = reg_to_class(RF_Predict)\n",
+    "RF_Accuracy = accuracy_score(y_test_class, y_rtc_RF)\n",
+    "print(\"Précision :\" + str(RF_Accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cf_matrix(y_test_class, y_rtc_RF, cmap='Blues', draw_mosaic=False)\n",
+    "#plt.title(\"Confusion Matrix of RFR\")\n",
+    "save_fig(\"confusion_matrix_of_RFR\")\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2517,6 +2632,29 @@
     "# })\n",
     "\n",
     "# feature_df_dt.sort_values(by='Importance', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_rtc_DT = reg_to_class(DT_Predict)\n",
+    "DT_Accuracy = accuracy_score(y_test_class, y_rtc_DT)\n",
+    "print(\"Précision :\" + str(DT_Accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cf_matrix(y_test_class, y_rtc_DT, cmap='Blues', draw_mosaic=False)\n",
+    "#plt.title(\"Confusion Matrix of DTR\")\n",
+    "save_fig(\"confusion_matrix_of_DTR\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -2590,6 +2728,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_rtc_LSVR = reg_to_class(LSVR_Predict)\n",
+    "LSVR_Accuracy = accuracy_score(y_test_class, y_rtc_LSVR)\n",
+    "print(\"Précision :\" + str(LSVR_Accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cf_matrix(y_test_class, y_rtc_LSVR, cmap='Blues', draw_mosaic=False)\n",
+    "#plt.title(\"Confusion Matrix of LSVR\")\n",
+    "save_fig(\"confusion_matrix_of_LSVR\")\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2642,6 +2803,29 @@
     "plot_results(reg_metrics, y_test_reg, y_test_class, SVR_Predict, model_accuracy_score)\n",
     "#plt.title(\"Results of SVR Predictions)\n",
     "save_fig(\"results_of_SVR_predictions\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_rtc_SVR = reg_to_class(SVR_Predict)\n",
+    "SVR_Accuracy = accuracy_score(y_test_class, y_rtc_SVR)\n",
+    "print(\"Précision :\" + str(SVR_Accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cf_matrix(y_test_class, y_rtc_SVR, cmap='Blues', draw_mosaic=False)\n",
+    "#plt.title(\"Confusion Matrix of DTR\")\n",
+    "save_fig(\"confusion_matrix_of_DTR\")\n",
     "plt.show()"
    ]
   },
@@ -2716,6 +2900,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "y_rtc_NNR = reg_to_class(NN_Predict)\n",
+    "NNR_Accuracy = accuracy_score(y_test_class, y_rtc_NNR)\n",
+    "print(\"Précision :\" + str(NNR_Accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cf_matrix(y_test_class, y_rtc_NNR, cmap='Blues', draw_mosaic=False)\n",
+    "#plt.title(\"Confusion Matrix of NNR\")\n",
+    "save_fig(\"confusion_matrix_of_NNR\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "regression_scores = pd.DataFrame({\n",
     "    'Model': [\n",
     "        'Linear Regression', 'Lasso', 'Ridge', 'Elastic Net',\n",
@@ -2764,7 +2971,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
