finished R notebook, added project links to both notebooks

--- a/rapport_Python.ipynb
+++ b/rapport_Python.ipynb
@@ -9,7 +9,11 @@
     "Notebook <b>Python</b> avec les codes utilisés pour le rapport final.<br>\n",
     "Auteurs : Juan AYALA, Jeong Hwan KO, Alice LALOUE, Aldo MELLADO AGUILAR.<br>\n",
     "4A MA - Groupes A et B<br>\n",
-    "2020 - 2021"
+    "2020 - 2021\n",
+    "\n",
+    "\n",
+    "<p>Lien <a href=\"https://github.com/jayalabanda/projet-ML\">Github</a></p>\n",
+    "<p>Lien <a href=\"https://www.overleaf.com/read/mgsjtvzkhmyn\">Overleaf</a></p>"
    ]
   },
   {
@@ -2971,7 +2975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
