--- a/rapport_Python.ipynb
+++ b/rapport_Python.ipynb
@@ -3028,7 +3028,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Résumé des résultats"
+    "## Résumé des résultats en régression"
    ]
   },
   {
@@ -3079,13 +3079,13 @@
     "classifs = model_performance_accuracy[\"Accuracy Score\"]\n",
     "regs = regression_scores[\"Thresholding Accuracy Score\"]\n",
     "\n",
-    "compare = pd.DataFrame({\n",
-    "    'Method': class_models,\n",
+    "compare_table = pd.DataFrame({\n",
+    "    'Model': class_models,\n",
     "    'Classification': classifs,\n",
     "    'Thresholding': regs\n",
     "})\n",
     "\n",
-    "compare"
+    "compare_table"
    ]
   },
   {
