corrected PCA graphs

--- a/rapport_R.ipynb
+++ b/rapport_R.ipynb
@@ -2531,12 +2531,12 @@
     "\n",
     "bp1 <- barplot(eig.val[1:10, 2], ylab = \"Pourcentage de variance expliquée\",\n",
     "               ylim = c(0, 35), col = \"#4682B4\")\n",
-    "text(bp1, eig.val[1:10, 2] + 2, labels = paste(round(eig.val[, 2], 2), \"%\"))\n",
+    "text(bp1, eig.val[1:10, 2] + 2, labels = paste(round(eig.val[1:10, 2], 2), \"%\"))\n",
     "lines(bp1, eig.val[1:10, 2])\n",
     "\n",
     "bp2 <- barplot(eig.val[1:10, 3], ylab = \"Variance partagée\",\n",
     "               ylim = c(0, 105), col = \"#4682B4\")\n",
-    "text(bp2, eig.val[1:10, 3] + 2, labels = paste(round(eig.val[, 3], 1), \"%\"))\n",
+    "text(bp2, eig.val[1:10, 3] + 2, labels = paste(round(eig.val[1:10, 3], 1), \"%\"))\n",
     "lines(bp2, eig.val[1:10, 3])"
    ]
   },
